# SkyCanvas

./: .gitignore  .gitmodules  .prototools  Cargo.toml  README.md  cli.sh  config.lua  hello.py  main.py  pyproject.toml
.moon/: .gitignore  toolchain.yml  workspace.yml
.moon/tasks/: rust.yml  tag-docker.yml
conductor/: Cargo.toml  Dockerfile  build.rs  moon.yml
conductor/src/: cli_args.rs  lib.rs  main.rs  redis.rs  state.rs
conductor/src/ardulink/: config.rs  connection.rs  cursed_strings.rs  mod.rs
conductor/src/ardulink/tasks/: mod.rs  task_health.rs  task_heartbeat.rs  task_recv.rs  task_request_stream.rs  task_send.rs
conductor/src/groundlink/: mod.rs  proto.rs  server.rs
conductor/src/groundlink/services/: mod.rs  svc_ardulink_connect.rs
conductor/src/transformers/: examples.rs  mod.rs  task.rs
data/test_images/depth_out/: color_car1.ply
depth_capture/: README.md  main.py  pyproject.toml
depth_capture/depth_capture/: __init__.py  capture.py  export_ply.py  segment.py  viewer.py
docker/: ardupilot-sil.Dockerfile  compose.sil.yml  full.docker-compose.yaml  sil.docker-compose.yaml
docs/: gen2.md
docs/assets/system_notes/: WaypointSegmentIds.md
foxglove_live/: Cargo.toml  README.md
foxglove_live/src/: config.rs  main.rs  redis_handler.rs  schema.rs  server.rs
gen2/quad_app/: Cargo.toml
gen2/quad_app/src/: main.rs
gen2/quad_app/src/app/: app_config.rs  mod.rs
gen2/quad_app/src/app/missions/: mission_hop.rs  mod.rs
gen2/quad_app/src/app/patterns/: mod.rs
gen2/quad_app/src/app/systems/: mod.rs  sys_mission_runner.rs  sys_waypoint.rs
gen2/quad_app/src/common/: commands.rs  context.rs  led.rs  log_rerun.rs  mavlink_helpers.rs  mod.rs  state.rs  waypoint.rs
gen2/quad_app/src/link/: mav_config.rs  mav_io.rs  mav_mode.rs  mav_queues.rs  mav_tasks.rs  mod.rs
gen2/quad_app/src/link/tasks/: mavtask_health.rs  mavtask_lla.rs  mavtask_local_ned.rs  mavtask_print.rs  mavtask_send.rs  mavtask_status_text.rs  mod.rs
groundlink/: Cargo.toml  moon.yml
groundlink/src/: lib.rs  main.rs  state.rs  ws_handler.rs
mcap_logger/: Cargo.toml  README.md  moon.yml  output-20250505-202803.mcap  output.mcap
mcap_logger/src/: main.rs  redis.rs
proto/: groundlink.proto  types.proto
quad_app/: __init__.py  app.py  context.py  docker_manager.py  log_rerun.py  quad.py  quad_rerun.py  waypoints.py
quad_app/ardupilot/: ardupilot_connection.py
quad_app/missions/: README.md  __init__.py  base.py  pointcloud.py  smiley.py  spiral.py
quad_app/patterns/: __init__.py  base.py  pointcloud.py  smiley.py  spiral.py  square.py
quad_app/systems/: __init__.py  led.py  waypoints.py
repo_cli/: Cargo.toml
repo_cli/src/: main.rs  shell.rs
scenarios/: Cargo.toml  moon.yml
scenarios/src/: api.rs  main.rs  runner.rs
scenarios/src/labs/: mod.rs  scenario_lab_arm.rs
scripts/: docker_build.sh  docker_up.sh
showkit/: Cargo.toml  moon.yml
showkit/src/: lib.rs
showkit/src/design/: mod.rs
showkit/src/design/primitives/: line.rs  mod.rs  point.rs
showkit/src/generators/: mod.rs
showkit/src/types/: light_color.rs  mod.rs  position.rs
showman/: Dockerfile  package.json
showman/src/: App.tsx  constants.ts  routes.tsx
showman/src/components/: RedisConnectionStatus.tsx
showman/src/hooks/: useRedisWebSocket.ts
showman/src/layout/: app_layout.tsx  sidebar.tsx  top_navbar.tsx
showman/src/pages/: ArduPilotGCS.tsx  RedisDemo.tsx  home.tsx
showman/src/routes/: index.tsx
showman/src/store/: redisStore.ts
skycanvas_config/: __init__.py  config_loader.py
