[project]
name = "skycanvas"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "geopy>=2.4.1",
    "mavsdk @ file:///home/vfp/repos/andreas/SkyCanvas/external/mavsdk-python",
    "python-on-whales>=0.75.0",
    "rerun-sdk>=0.28.2",
]

