[project]
name = "skycanvas"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "geopy>=2.4.1",
    "lupa>=2.6",
    "mavsdk>=3.10.2",
    "numpy>=1.26",
    "plyfile>=1.0",
    "python-on-whales>=0.75.0",
    "rerun-sdk>=0.28.2",
]

