[package]
name = "conductor"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.97"
chrono = "0.4.40"
clap = { version = "4.5.35", features = ["derive"] }
log = "0.4.27"
pretty_env_logger = "0.5.0"
prettytable = "0.10.0"

rand = "0.9.0"
regex = "1.11.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
thiserror = "2.0.12"
tokio = { version = "1.44.2", features = ["full", "macros", "rt", "sync", "time", "tracing"] }
uuid = { version = "1.16.0", features = ["v4"] }

crossbeam-channel = "0.5.15"
mavlink = "0.13.1"
