[project]
name = "depth_capture"
version = "0.1.0"
description = "Monocular depth estimation to PLY pointcloud converter"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "torch>=2.0",
    "opencv-python>=4.8",
    "timm>=0.9",
    "numpy>=1.26",
    "plyfile>=1.0",
    "open3d>=0.18",
    "lupa>=2.0",
    "pillow>=10.0",
    "ultralytics>=8.3.0",
    "clip @ git+https://github.com/ultralytics/CLIP.git",
    "ftfy",
    "regex",
]
