[package]
name = "foxglove_live"
version = "0.1.0"
edition = "2021"

[dependencies]
# Add conductor as a dependency
conductor = { path = "../conductor" }

# For websocket server
tokio-tungstenite = "0.21.0"
tokio = { version = "1.44.2", features = ["full"] }
futures-util = "0.3.31"
uuid = { version = "1.8.0", features = ["v4", "fast-rng"] }

# For JSON handling
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"

# For Redis connection
redis = { version = "0.30.0", features = ["tokio-comp"] }

# For logging
log = "0.4.27"
pretty_env_logger = "0.5.0"

# For command line args
clap = { version = "4.5.35", features = ["derive"] }

# For error handling
anyhow = "1.0.97"
thiserror = "2.0.12"

# Foxglove schema
schemars = "0.8.16"
