[package]
name = "mcap_logger"
version = "0.1.0"
edition = "2021"

[dependencies]
# Add conductor as a dependency
conductor = { path = "../conductor" }

anyhow = "1.0.97"
chrono = { version = "0.4.40", features = ["serde"] }
clap = { version = "4.5.35", features = ["derive"] }
log = "0.4.27"
pretty_env_logger = "0.5.0"

serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.44.2", features = ["full", "macros", "rt", "sync", "time", "tracing"] }

# MCAP specific dependencies
mcap = "0.18.0"

# Redis dependencies
redis = { version = "0.30.0", features = ["json", "streams", "tokio-comp"] }
futures-util = "0.3.31"

# Optional: for better error handling
thiserror = "2.0.12"
